I made changes to the web page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     , initial-scale=1.0">
     <title>Carole's portfolio</title>
 </head>
-<img src="./images/heja.JPG" alt="Carole Gasaro"> 
 <p>
 
     <a href="index.html" style="text-decoration-color: lightblue;">Home</a>
@@ -18,6 +17,7 @@
 </p>
 <body>
     <h1>About</h1>
+  
     <p>
       Carole Gasaro is a student at Ashesi University in Ghana, 
       where she is pursuing a Bachelor's degree in Management Information Systems after being awarded the MasterCard Foundation Scholar Program scholarship.
@@ -28,8 +28,11 @@
       She is firmly convinced that hard work always pays off she takes that from her mother, her daily inspiration.
     </p>
     <p>
+       
       Carole currently resides in Rwanda where she was born and raised.  
-
+      <p>
+        <img src="images/heja.JPG" alt="Carole Gasaro">
+    </p>
       Connect with Carole on LinkedIn 
       <a href="https://www.linkedin.com/in/carole-gasaro-594986171"><strong>here</strong></a>
     </p> 
